--- a/MSSM/UncOv.tex
+++ b/MSSM/UncOv.tex
@@ -186,7 +186,7 @@ or background events in the \etau channel.}
 \begin{center}
 \caption{Systematic uncertainties that affect the estimated number of signal
 or background events in the \tautau channel.}
-{\scriptsize
+{\tiny
 \begin{tabular}{l|cc|p{5cm}}
 \toprule
      & \multicolumn{2}{|c}{Event yield uncertainty by event category} & \\
