--- a/backmatter.tex
+++ b/backmatter.tex
@@ -60,6 +60,27 @@
 \acro{MPF}[MPF]{missing transverse energy projection fraction}
 \end{acronym}
 
+\appendix
+\chapter{\texorpdfstring{Overview of systematic uncertainties in the MSSM \AHtotautau analysis}{Overview of systematic uncertainties in the MSSM A/H to tautau analysis}}
+\label{appendix:uncerts}
+An overview of the systematic uncertainties that are applied in the MSSM \AHtotautau analysis (chapter \ref{chap:mssm})
+are summarised in this appendix. The uncertainties are given in
+table \ref{tab:SystematicUncertainties_mt} for the $\mu\tau_h$
+channel, in table \ref{tab:SystematicUncertainties_et} for the $e\tau_h$ channel,
+in table \ref{tab:SystematicUncertainties_tt} for the $\tau_h\tau_h$ channel and
+in table \ref{tab:SystematicUncertainties_em} for the $e\mu$ channel. Additionally,
+the systematic uncertainties for the $Z\rightarrow\mumu$ control region are shown
+in table \ref{tab:SystematicUncertainties_zmm}. Correlations are also indicated.
+Some of the uncertainties
+are different for different processes, where this is the case ranges are given.
+Uncertainties marked "Fully correlated" are correlated between the different
+decay channels and event categories, those marked "Fully uncorrelated" are
+uncorrelated between the different decay channels and event categories. "Cats:C,chns:U"
+indicates that the uncertainty is correlated between categories but uncorrelated between
+the different decay channels.
+\input{MSSM/UncOv}
+
+
 
 %% If you have time and interest to generate a (decent) index,
 %% then you've clearly spent more time on the write-up than the 
