One more change...

--- a/MSSM/MSSM.tex
+++ b/MSSM/MSSM.tex
@@ -549,8 +549,9 @@ signal and \ttbar events in the \emu channel.
 
 \section{Background estimation}
 \label{sec:mssm_bkgs}
-The methods used for background estimation will be described in this
-section. 
+To estimate the backgrounds to the analysis a mixture of data--driven
+methods and \ac{MC} samples is employed. The methods used for background 
+estimation will be described in this section.
 
 \subsection{Generator matching}
 \label{sec:mssm_bkgs_genmatch}
