Adding a few missing figures

--- a/backmatter.tex
+++ b/backmatter.tex
@@ -61,7 +61,8 @@
 \end{acronym}
 
 \appendix
-\chapter{\texorpdfstring{Overview of systematic uncertainties in the MSSM \AHtotautau analysis}{Overview of systematic uncertainties in the MSSM A/H to tautau analysis}}
+\chapter*{\texorpdfstring{Appendix A: Overview of systematic uncertainties in the MSSM \AHtotautau analysis}{Overview of systematic uncertainties in the MSSM A/H to tautau analysis}}
+\addcontentsline{toc}{chapter}{A: Overview of systematic uncertainties in the MSSM \AHtotautau analysis}
 \label{appendix:uncerts}
 An overview of the systematic uncertainties that are applied in the MSSM \AHtotautau analysis (chapter \ref{chap:mssm})
 are summarised in this appendix. The uncertainties are given in
