--- a/thesis.tex
+++ b/thesis.tex
@@ -14,6 +14,8 @@
 %\usepackage{lmodern}
 %\usepackage{mathpazo}
 %\usepackage{euler}
+%\usepackage[pagewise,mathlines]{lineno}
+%\linenumbers
 
 %% Put package includes etc. into preamble.tex for convenience
 \input{preamble}
