Adding some bits on MSSM scenarios to theory chapter

--- a/backmatter.tex
+++ b/backmatter.tex
@@ -21,7 +21,8 @@
 \acro{SPS}[SPS]{Super Proton Synchrotron}
 \acro{PSB}[PSB]{Proton Synchrotron Booster}
 \acro{LS1}[LS1]{Long Shutdown 1}
-\acro{MSSM}[MSSM]{Minimal Supersymmetric standard model}
+\acro{MSSM}[MSSM]{minimal supersymmetric standard model}
+\acro{SM}[SM]{standard model}
 \acro{SUSY}[SUSY]{Supersymmetry}
 \acro{2HDM}[2HDM]{Two Higgs Doublet Model}
 \acro{ECAL}[ECAL]{Electromagnetic calorimeter}
