--- a/thesis.tex
+++ b/thesis.tex
@@ -14,7 +14,7 @@
 %\usepackage{lmodern}
 %\usepackage{mathpazo}
 %\usepackage{euler}
-%\usepackage[pagewise,mathlines]{lineno}
+\usepackage[pagewise,mathlines]{lineno}
 %\linenumbers
 
 %% Put package includes etc. into preamble.tex for convenience
@@ -51,6 +51,7 @@
 
 %% Start the content body of the thesis
 \begin{mainmatter}
+  \input{Theory/Theory}
   \input{Detector/Detector}
   \input{Objects/Objects}
   \input{Hhh/Hhh}
